Form Maker changelog file
=========================

Next version
- Created possibility to store user answers in database
- Removed email sender field, since this is handled by eZ

Version 1.8.2
- Improved drag'n'drop functionality
- Fixed fatal error displayed when validating the 'Date (only year)' input
- Added ajax loader in admin panel

Version 1.8.1
- All documents except README.md moved into 'doc' folder
- Created Developer's guide, which can be found under 'doc/developer.md'
- Summary page contains the form ID since now - it helps when you want to override this page for particular form
- Added posibility to exclude form types from extension (by adding its ID into formmaker.ini)
- Not camel-cased ini variables fixed (so be aware when update'ing - in case when you have overrided original FormMaker templates)

Version 1.8
- After processing file attribute delete attachments when form data have been sent
- Setting file formmaker.ini.append.php renamed into formmaker.ini
- Added possibility to restrict the forms for which external scripts (both - processing and injecting) will be run
- Editors can set the email title for each form
- Created bash script (bin/sh/sql_schema.sh) for generating install.sql file
- Package containing Form class updated (package/form-1.8-1.ezpkg), however it's not mandatory to update it.
- Added possibility to select attribute_view_gui view. It is possible after updating the Form class with latest package.

Version 1.7.3
- 'File' attribute enabled
- Fixed not working form when there was only file attribute in it
- Fixed errors displayed when 'File' attribute remained empty and form was processed
- Fixed errors displayed when 'File' attribute remained not-empty and form was processed

Version 1.7.2
- 'Select' attribute fixed and enabled
- Fixed problem with dissapearing custom regex value
- Fixed Fatal Error caused by class FormMaker_Validate_Exception, which didn't exist, but was used in the code