@@ -3,7 +3,9 @@ Form Maker changelog file
 
 Next version
 - Created possibility to store user answers in database
+- Answers are viewable in admin panel - "Form maker" -> "See answers"
 - Removed email sender field, since this is handled by eZ
+- Recipients array is validated before sending the emails
 
 Version 1.8.2
 - Improved drag'n'drop functionality
